deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cleanarch-api
  namespace: cleanarch-dev
spec:
  type: ClusterIP
  selector:
    app: cleanarch-api
  ports:
    - port: 80
      targetPort: 8080
